[package]
name = "vm8"
version = "0.1.0"
authors = ["Alvaro Polo <alvaro.polo@cabify.com>"]
edition = "2015"
build = "build.rs"

[features]
nightly = []

[dependencies]
byteorder = "1.2"
num-traits = "0.2"
time = "0.1"

[dev-dependencies]
rand = "0.5"

[build-dependencies]
rustc_version = "0.1.*"

[lib]
name = "vm8"

[[bin]]
name = "c80"
path = "src/bin/c80/main.rs"

[profile.release]
codegen-units=1
lto = true
opt-level = 3