[package]
name = "vm8"
version = "0.1.0"
authors = ["Alvaro Polo <alvaro.polo@cabify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
clap = "2.33"

[[bin]]
name = "vm8-msx"
path = "src/bin/vm8-msx/main.rs"
