[package]
name = "vm8"
version = "0.1.0"
authors = ["Alvaro Polo <alvaro.polo@cabify.com>"]
edition = "2021"
build = "build.rs"

[features]
nightly = []

[dependencies]
byteorder = "1.2"
dirs = "1.0.4"
raylib = { version = "3.7" }
rustyline = "9.1.0"
time = "0.1"

[dev-dependencies]
proptest = "1.0.0"
rstest = "0.12.0"

[build-dependencies]
rustc_version = "0.1.*"

[lib]
name = "vm8"

[[bin]]
name = "nexus"
path = "src/bin/nexus/main.rs"

[profile.release]
codegen-units=1
lto = true
opt-level = 3
